<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.view.FiltrarFragment">

        <androidx.appcompat.widget.Toolbar
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <ImageButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_close_icon"
                        android:background="@color/white"
                        android:layout_alignParentEnd="true"
                        android:layout_centerInParent="true"
                        android:layout_marginLeft="280dp"/>
                </RelativeLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/filtrar_facturas"
                    android:textSize="30sp"
                    android:textStyle="bold"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/fecha_emision"
                    android:textSize="15sp"
                    android:textStyle="bold"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/fecha_inicio"
                        android:textSize="13sp"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/fecha_fin"
                        android:textSize="13sp"
                        android:layout_marginLeft="150sp"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <DatePicker
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/dpFecha"
                        android:visibility="gone"/>

                    <DatePicker
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/dpFechaFin"
                        android:visibility="gone"/>

                    <Button
                        android:id="@+id/btn_fecha_incio"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:backgroundTint="@color/grey"
                        android:onClick="mostrarCalendario"
                        android:text="@string/boton_fecha"
                        android:textColor="@color/black"
                        android:textSize="13sp" />

                    <Button
                        android:id="@+id/btn_fecha_fin"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="60sp"
                        android:backgroundTint="@color/grey"
                        android:onClick="mostrarCalendario"
                        android:text="@string/boton_fecha"
                        android:textColor="@color/black"
                        android:textSize="13sp" />
                </LinearLayout>

            </LinearLayout>

        </androidx.appcompat.widget.Toolbar>

</FrameLayout>